Fixing un-tappable Confess button on narrow browsers.

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -339,6 +339,8 @@ footer {
 
 /* Confess & Confessional Pages */
 #confessionForm {
+	overflow: auto;
+	
 	textarea {
 		margin-bottom: 1em;
 	}
